[BUG FIX] Character image in CharacterProfile screen renders behind the contentl. CSS fix. SoundPlayer now renders in the CharacterProfile screen. Refactor setImage function in MainImageDisplay Component

--- a/src/screens/CharacterProfile/CharacterProfile.css
+++ b/src/screens/CharacterProfile/CharacterProfile.css
@@ -30,6 +30,8 @@ justify-content: center;
 margin: 0 0 2vh 0;
 max-width: 40vw;
 max-height: 85vh;
+position: relative;
+z-index: 0;
 } 
 
 .characterProfile .displayImgContainer img {
@@ -49,6 +51,8 @@ max-height: 83vh;
   background: rgb(0, 0, 0, 0.5);
   -webkit-animation: slide-in-left 0.7s ease-out both;
           animation: slide-in-left 0.7s ease-out both;
+  position: relative;
+  z-index: 1;
 }
 
 .characterProfile table {
@@ -81,7 +85,6 @@ max-height: 83vh;
 .characterProfile .characterSkillsInfo {
   grid-column: 4 / span 1;
   grid-row: 2 / span 1;
-
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(10, 1fr);
@@ -91,8 +94,8 @@ max-height: 83vh;
   background: rgb(0, 0, 0, 0.6);
   -webkit-animation: slide-in-right 0.7s ease-in both;
               animation: slide-in-right 0.7s ease-in both;
-
-  overflow: auto;
+  position: relative;
+          z-index: 1;
 }
 
 .characterSkillsInfo img {
